# full-stack-rust

./: .env_example  Cargo.toml  Makefile  README.md
migrations/: 20250922180345_create_user_table.sql
src/: lib.rs  main.rs  routes.rs
src/config/: database.rs  logs.rs  mod.rs
src/data/: errors.rs  user.rs
src/handlers/: auth.rs  errors.rs  mod.rs  public.rs  todos.rs
src/models/: mod.rs  templates.rs  user_form_model.rs
src/utils/: mod.rs
templates/: index.html
templates/pages/: creates.html  home.html  log-in.html  not-found.html  server-error.html  sing-up.html  todos.html
