[package]
name = "full-stack-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.47.1", features = ["full"]}
axum = {version = "0.8.4", features = ["macros"]}
askama = {version = "0.14.0"}
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
serde = {version = "1.0.226", features = ["derive"]}
validator = { version = "0.20.0", features = ["derive"]}
dotenv = "0.15.0"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid"]}
bcrypt = "0.17.1"
thiserror = "2.0.16"